<resources>
    <string name="app_name">Se7tak Doctor</string>
    <string name="slogn">We care you 24 hour</string>
    <string name="login">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your password?</string>
    <string name="create_new_account">Create new account ?</string>
    <string name="first_name">Name AR</string>
    <string name="last_name">Name EN</string>
    <string name="specialty">Specialty</string>
    <string name="specialty_en">Specialty EN</string>
    <string name="specialty_ar">Specialty AR</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="copy_right">Copy right @</string>
    <string name="upload_a_photo_of_your_practice_license">Upload a photo of your practice license</string>
    <string name="confirm">Confirm</string>
    <string name="publish_profile">Puplish Profile</string>
    <string name="about">About</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="save">Save</string>
    <string name="year">Year</string>
    <string name="clinic_info">Clinic Info</string>
    <string name="clinic_phone_number">Clinic Phone Number</string>
    <string name="examination_fees">Examination Fees</string>
    <string name="assistant_phone_number">Assistant Phone Number</string>
    <string name="enter_valid_email">enter valid email</string>
    <string name="enter_valid_password">enter valid password</string>
    <string name="enter_valid_specialty">enter valid specialty</string>
    <string name="choose_profile_image">choose profile image</string>
    <string name="forget_password_">Forget password</string>
    <string name="sent_to_mail">Sent to your mail</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="enter_valid_name">enter valid name</string>
    <string name="enter_valid_phone">enter valid phone</string>
    <string name="upload_license_fragment">UploadLicenseFragment</string>
    <string name="profile">profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="scheduel">scheduel</string>
    <string name="orders">orders</string>
    <string name="profile_setting">profile_setting</string>
    <string name="log_out">Logout</string>
    <string name="help_center">Help Center</string>
    <string name="language">Language</string>
    <string name="edit_account">Edit Account</string>
    <string name="logoutask">Are you sure you need to logout</string>
    <string name="dismisss">Dismiss</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="edit_password">Edit Password</string>
    <string name="patient_name">Patient Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="femal">Female</string>
    <string name="birthday">Birthday</string>
    <string name="patient_id">Patient ID</string>
    <string name="notes">Notes</string>
    <string name="search_txt">Search</string>
    <string name="examination">Examination</string>
    <string name="date_time">Date and Time</string>
    <string name="consultation">Consultation</string>
    <string name="complete_date">Error Complete Data</string>
    <string name="photo">photo</string>
    <string name="clinic_assistant">Clinic Assistant</string>
    <string name="clinic_address">Clinic Address</string>
    <string name="clinic_photos">Clinic Photos</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="check_in">Check in</string>
    <string name="no_show">No show</string>
    <string name="accept">Accept</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="compeleted">Completed</string>
    <string name="rejected">Rejected</string>
    <string name="canceled">Canceled</string>
    <string name="appintments">Appointments</string>
    <string name="saturday">Saturday</string>
    <string name="holiday">Holiday</string>
    <string name="workDay">Work day</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="chosetime">Choose Time</string>
    <string name="work_time">Work Time</string>
    <string name="order_status_changed">Order status changed to </string>
    <string name="not_attend">Not attend</string>
    <string name="enter_reason">Enter reason</string>
    <string name="reason">Reason</string>
    <string name="done">Confirm</string>
    <string name="refuse">Refuse</string>

    <string name="not_valid_user">Not Valid User</string>
    <string name="publish_doctor">Publish Doctor</string>
    <string name="unpublish_doctor">Un Publish Doctor</string>


    <string name="over_rate">Overall rating from</string>
    <string name="vistors">visitors</string>
    <string name="doctor">Doctor</string>

    <string name="fees">Fees</string>
    <string name="about_the_doctor">About the Doctor</string>
    <string name="about_the_clinic">About the clinic</string>
    <string name="egp">EGP</string>

</resources>
