<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <include
        layout="@layout/save_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/txt_border_signup"
        android:padding="@dimen/_2sdp">

        <EditText
            android:id="@+id/patient_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border_empty"
            android:hint="@string/patient_name"
            android:inputType="text"
            android:drawableStart="@drawable/icon_patient"
            android:padding="@dimen/_2sdp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"></EditText>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/txt_border_signup"
        android:padding="@dimen/_2sdp">

        <EditText
            android:id="@+id/patient_phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border_empty"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:padding="@dimen/_2sdp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"></EditText>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/txt_border_signup"
        android:padding="@dimen/_2sdp">

        <EditText
            android:id="@+id/patient_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border_empty"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:padding="@dimen/_2sdp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"></EditText>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/male"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/_13sdp" />

        <RadioButton
            android:id="@+id/female_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/femal"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="@dimen/_13sdp" />

    </RadioGroup>

    <Button
        android:id="@+id/patient_birthday_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:hint="@string/birthday"
        android:inputType="date"
        android:padding="@dimen/_4sdp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/_15sdp"
        app:met_baseColor="@android:color/white"
        app:met_bottomTextSize="0dp"
        app:met_floatingLabel="none"
        android:background="@drawable/button_login"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@android:color/white"
        app:met_underlineColor="@android:color/white" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/txt_border_signup"
        android:padding="@dimen/_2sdp">

        <EditText
            android:id="@+id/patient_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border_empty"
            android:hint="@string/patient_id"
            android:inputType="text"
            android:padding="@dimen/_2sdp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"></EditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/txt_border_signup"
        android:padding="@dimen/_2sdp">

        <EditText
            android:id="@+id/notes_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_border_empty"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:padding="@dimen/_2sdp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"></EditText>

    </android.support.design.widget.TextInputLayout>




</LinearLayout>
