<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reg_specialty_img"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/camera_icon"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp" />


        <EditText
            android:id="@+id/specialty_en_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/txt_border_signup"
            android:drawableStart="@drawable/docto_stethoscope"
            android:drawablePadding="@dimen/_15sdp"
            android:hint="@string/specialty_en"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/specialty_ar_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/txt_border_signup"
            android:drawableStart="@drawable/docto_stethoscope"
            android:drawablePadding="@dimen/_15sdp"
            android:hint="@string/specialty_ar"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="15dp" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>