<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/coupon_dialog_bg"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/enter_reason"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/reason_txt_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_below="@+id/title"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/reason"
            android:inputType="textMultiLine"
            android:padding="@dimen/_5sdp">


        </EditText>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reason_txt_input"
            android:layout_marginTop="@dimen/_10sdp">


            <Button
                android:id="@+id/apply_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_login"
                android:text="@string/done"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>