<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimaryDark">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/login_scr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/forget_password_"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/_13sdp"
                    app:met_baseColor="@color/colorAccent"
                    app:met_bottomTextSize="0dp"
                    app:met_floatingLabel="none"
                    android:layout_marginTop="@dimen/_14sdp"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_singleLineEllipsis="true"
                    app:met_textColorHint="@color/colorAccent"
                    app:met_underlineColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btnForgetPass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/confirm"
                    android:background="@drawable/button_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/textViewCopyRight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|bottom"
                    android:gravity="bottom|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/copy_right"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
